# MusicBridge

./: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  test.cpp  test.h
play/: CMakeLists.txt  play.cpp  play.h
